# ml-project-template

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md  enviroment.yml  environment.yaml  pyproject.toml  requirements-codequality.txt  requirements.txt  setup.cfg
.github/: pull_request_template.md
.github/workflows/: main_staging_ci.yml
notebooks/dev/: testing.ipynb
pipelines/configs/: main.yaml
pipelines/configs/churn_prediction/: hyper_parameter_opt.yaml  main.yaml
pipelines/configs/feature_engineering/: fe.yaml
pipelines/feature_engineering/: components.py
pipelines/registries/model_registry/14_10_2023/training/: AdaBoost_upsampling.pickle
pipelines/training/: components.py
src/: utils.py
src/feature_engineering/: etl.py  model_specific_transformations.py
src/scoring/: inference.py
src/training/: models_training.py  utils.py
tests/: conftest.py
tests/src/feature_engineering/: etl.py  model_specific_transformations.py  test_etl.py
tests/utils/: logging.py
utils/: logging.py  logging_ml.py  ml_logging.py
utils/llm/: readme.md
utils/pylint_report/: pylint_report.txt
