[build-system]
requires = ["flit_core >=2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "example-project"
authors = [
  {name = "Pablo Salvador", email = "pablosalvadorlopez11@gmail.com"}
]
description = "An example project demonstrating pyproject.toml"
readme = "README.md"
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3.8"
]
requires-python = ">=3.8,<4.0"
dynamic = ["version"]

[project.optional-dependencies]
extras = [
  "optional_package_1",
  "optional_package_2"
]

[project.urls]
homepage = "https://example.com"
repository = "https://github.com/username/example-project"
documentation = "https://example.com/docs"

[tool.flit.metadata]
module = "example_project"
author-email = "john.doe@example.com"

[tool.flit.scripts]
example-script = "example_project:main"

[tool.bandit]
targets = ["example_project/"]
exclude = ["tests/"]

[tool.black]
line-length = 88

