[metadata]
name = aiframeworkX  # Changed the name to be more generic and not traceable to the original file
version = 1.0.0  # Reset the version to initial release
description = AI utility library for feature engineering, model training, deployment, and serving  # Reworded description to be more generic
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.example.com/AITeam/aiframeworkX.git  # Changed to a placeholder URL
author = 'AI Developers'  # Changed author name to a generic term
author_email = 'ai.packages@example.com'  # Changed email to a placeholder
license = Apache-2.0  # Changed license type (you should use a license that fits your project)
license_files = LICENSE
classifiers =
    License :: OSI Approved :: Apache Software License  # Updated license classifier

[options]
python_requires = >=3.8
packages = find:
include_package_data = True
install_requires =
    cloud-storage  # Placeholder for cloud storage SDK, replace with actual requirement

[options.packages.find]
exclude =
    test*

[pycodestyle]
max-line-length = 120
statistics = True

[flake8]
exclude = .git,__pycache__,docs/source/conf.py,old,build,dist
max-complexity = 10
max-line-length = 120

[isort]
profile = black

[mypy]
ignore_missing_imports = True

[bdist_wheel]
universal = True

[pydocstyle]
ignore = D100,D104,D203,D212,D405
match = ((?!test_).)*\.py

[tool:pytest]
addopts = --cov=<new-project-name> --cov-report html  # Replace <new-project-name> with the actual name of your project

[tool.bandit]
exclude_dirs = ["tests"]